Horizontal scroll solved. 28-03-2024. Roshith.

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     transform: translateX(0);
   }
   to {
-    transform: translateX(calc(-50% - 1.5rem));
+    transform: translateX(calc(-50% - 2rem));
   }
 }
 
